<resources>
    <string name="app_name">CueLens</string>
    <string name="info_feed_loading">Informationen werden geladen</string>
    <string name="info_feed_hide_permanently">Diese Nachricht nicht mehr anzeigen</string>
    <string name="info_feed_confirm">OK</string>
    <string name="info_feed_load_failed">Informationen konnten nicht geladen werden.</string>
    <string name="info_feed_dismiss_failed">Die Auswahl konnte nicht gespeichert werden.</string>
    <string name="language_switch_label">EN</string>
    <string name="language_switch_description">Sprache auf Englisch umstellen</string>
    <string name="notification_consent_title">Benachrichtigungen</string>
    <string name="notification_consent_text">CueLens kann Sie über neue allgemeine Informationen wie Update-Hinweise und über die Verfügbarkeit einer neuen Studienaufgabe informieren. Benachrichtigungen enthalten keine Angaben zu Rauchstatus oder Rauchverlangen.</string>
    <string name="notification_consent_toggle">Benachrichtigungen zulassen</string>
    <string name="continue_label">Weiter</string>
    <string name="notification_channel_name">CueLens-Informationen</string>
    <string name="notification_channel_description">Allgemeine Informationen und Update-Hinweise zu CueLens</string>
    <string name="notification_title">CueLens</string>
    <string name="notification_text">Neue Information zu CueLens verfügbar</string>
    <string name="study_reminder_channel_name">CueLens-Erinnerungen</string>
    <string name="study_reminder_channel_description">Neutrale Hinweise auf wieder verfügbare Studienaufgaben</string>
    <string name="study_reminder_title">CueLens</string>
    <string name="study_reminder_text">Eine neue Aufgabe ist verfügbar.</string>
    <string name="study_reminder_public_text">Eine neue Information ist verfügbar.</string>
    <string name="home_welcome">Willkommen bei CueLens</string>
    <string name="app_activation">App-Aktivierung</string>
    <string name="activation_already_completed">Die App ist aktiviert.</string>
    <string name="participant_identifier">E-Mail-Adresse oder Prolific-ID</string>
    <string name="activate">Aktivieren</string>
    <string name="activation_running">Aktivierung läuft</string>
    <string name="activation_failed">Aktivierung fehlgeschlagen. Bitte versuchen Sie es später noch einmal.</string>
    <string name="activation_needs_support">Die Aktivierung war nicht möglich. Bitte wenden Sie sich an cuelens@each-and-every.de.</string>
    <string name="data_protection_title">Aktualisierte Datenschutzerklärung</string>
    <string name="data_protection_notice">Bitte lesen Sie die aktualisierte Datenschutzerklärung. Um die CueLens-App zu nutzen, stimmen Sie der Datenschutzerklärung bitte erneut zu.</string>
    <string name="data_protection_open_policy">Datenschutzerklärung öffnen</string>
    <string name="data_protection_accept">Ich stimme der aktualisierten Datenschutzerklärung zu.</string>
    <string name="data_protection_submit">Absenden</string>
    <string name="data_protection_submitting">Wird gesendet</string>
    <string name="data_protection_failed">Ihre Zustimmung konnte nicht gespeichert werden. Bitte versuchen Sie es später noch einmal.</string>
    <string name="demo_study_situation">Beispiel-Studiensituation</string>
    <string name="demo_situation_notice">Dies ist ein Beispiel und kein Teil der Studie.</string>
    <string name="demo_image_matching_title">Beispiel: Cue-Matching</string>
    <string name="demo_word_labeling_title">Beispiel: Cue-Labeling</string>
    <string name="demo_craving_title">Beispiel: Rauchverlangen</string>
    <string name="demo_matching_wait">Bitte warten Sie noch %1$d Sekunden.</string>
    <string name="demo_matching_prompt">Wählen Sie das Bild, das am besten zum gezeigten Reiz passt.</string>
    <string name="demo_labeling_prompt">Wählen Sie die Bezeichnung, die am besten zum gezeigten Reiz passt.</string>
    <string name="demo_fitting_label">Aschegeruch</string>
    <string name="demo_less_fitting_label">Regenschirmmoment</string>
    <string name="demo_cue_image_description">Gezeigter Reiz</string>
    <string name="demo_choice_image_one">Erste Bildauswahl</string>
    <string name="demo_choice_image_two">Zweite Bildauswahl</string>
    <string name="demo_craving_prompt">Wie hoch ist in diesem Moment Ihr Rauchverlangen?</string>
    <string name="demo_continue">Weiter</string>
    <string name="demo_complete_title">Beispiel abgeschlossen</string>
    <string name="demo_complete_notice">Es wurden keine Daten übertragen oder dauerhaft gespeichert.</string>
    <string name="back_to_home">Zur Startseite</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_privacy_notice">Bitte geben Sie keine personenbezogenen Daten, E-Mail-Adressen oder Abrechnungscodes ein.</string>
    <string name="feedback_source_label">Wie haben Sie von der CueLens-Studie erfahren?</string>
    <string name="feedback_comment_label">Was gefällt Ihnen an der Studie, wobei gab es eventuell Probleme?</string>
    <string name="feedback_submit">Absenden</string>
    <string name="feedback_submitting">Wird gesendet</string>
    <string name="feedback_submitted">Vielen Dank für Ihr Feedback.</string>
    <string name="feedback_failed">Das Feedback konnte nicht gesendet werden. Bitte versuchen Sie es später erneut.</string>
    <string name="next_study_run">Nächster Studiendurchgang</string>
    <string name="next_study_run_countdown">Nächster Studiendurchgang in %1$s</string>
    <string name="study_completed">Studie abgeschlossen</string>
    <string name="study_prolific_completed">Studie abgeschlossen. Der Abschluss bei Prolific erfolgt üblicherweise innerhalb 2 Tagen.</string>
    <string name="study_transfer_pending">Datenübertragung ausstehend</string>
    <string name="study_run_progress">Durchgang %1$d von %2$d</string>
    <string name="study_resources_incomplete">Cue-Labeling noch unvollständig</string>
    <string name="study_complete_transfer">Bitte schließen Sie die Übertragung ab.</string>
    <string name="study_compensation_code">Bitte senden Sie diesen Aufwandsentschädigungscode an cuelens@each-and-every.de:</string>
    <string name="study_copy_compensation_code">Code kopieren</string>
    <string name="study_transfer_running">Übertragung läuft</string>
    <string name="study_retry">Erneut versuchen</string>
    <string name="study_retry_pending_transfer">Ausstehende Übertragung erneut senden</string>
    <string name="study_start_run">Durchgang starten</string>
    <string name="study_submission_failed">Die Datenübertragung ist fehlgeschlagen. Bitte versuchen Sie es erneut.</string>
    <string name="study_submit">Absenden</string>
</resources>
